--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
     "ethers": "^5",
+    "prettier": "^3.0.0",
     "react": "^18.2",
     "react-dom": "^18.2",
     "react-router-dom": "^6.14.1"
